--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,13 @@ color: rgb(248, 70, 66);
   font-weight: bold;
 }
 
+.inner-text h4 {
+  text-align: right;
+  font-size: 15px;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
 /* location */
 
 .location {
@@ -221,4 +228,102 @@ color: rgb(248, 70, 66);
 {
   margin-left: 20px;
 }
+
+
+/* 
+ * sliderkit 
+ */
+.sliderkit {
+  max-width: 640px;
+  width: 100%;
+  /*min-height: 200px;*/
+  height: 240px;
+
+  border-radius: 2px;
+  border: 1px solid #aaa;
+}
+.photoslider-mini .sliderkit-go-btn {
+  position:absolute;
+  top:0;
+  z-index:10;
+  width:50px;
+  /*height:335px;*/
+}
+.photoslider-mini .sliderkit-go-prev { left:0;  }
+.photoslider-mini .sliderkit-go-next { right:0; }
+.photoslider-mini .sliderkit-go-btn a{
+  display:block;
+  width:50px;
+  height:240px;
+  opacity:0.6;
+  cursor:pointer;
+  background-color:#fff;
+  background-repeat:no-repeat;
+  background-position:center center;
+
+  text-align: center;
+  font-size: 30px;
+  padding-top: 100px;
+  height: 140px;
+}
+.photoslider-mini .sliderkit-go-prev a { }
+.photoslider-mini .sliderkit-go-next a { }
+.photoslider-mini .sliderkit-go-btn span{
+  color: rgba(200,200,200,0.8);
+  text-shadow: 1px 1px rgba(33,33,33, 0.6);
+  /*display:none;*/
+}
+
+
+.photoslider-mini .sliderkit-btn-disable a {
+  opacity:0; /*can be set to any value until 1*/
+  cursor:default;
+}
+.photoslider-mini .sliderkit-btn-disable a:hover {
+  cursor:default;
+}
+
+/*
+ */
+.sliderkit-panel-active {
+  width : 100%;
+  height: 100%;
+}
+.sliderkit-panel-active img {
+  display: block;
+  margin: 0 auto;
+
+  /* vertical align */
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.sliderkit-panel:not(.sliderkit-panel-active) {
+  display: none;
+}
+
+/*---------------------------------
+ *  Photos slider > Minimal
+ *---------------------------------*/
+/*
+.photoslider-mini{width:500px;height:335px;}
+*/
+
+/* Panels buttons */
+	/*
+.photoslider-mini .sliderkit-go-btn{position:absolute;top:0;z-index:10;width:50px;height:335px;}
+.photoslider-mini .sliderkit-go-prev{left:0;}
+.photoslider-mini .sliderkit-go-next{right:0;}
+.photoslider-mini .sliderkit-go-btn a{display:block;width:50px;height:335px;opacity:0.6;cursor:pointer;background-color:#fff;background-repeat:no-repeat;background-position:center center;}
+.photoslider-mini .sliderkit-go-prev a{background-image:url("../images/slider-arrow-left.gif");}
+.photoslider-mini .sliderkit-go-next a{background-image:url("../images/slider-arrow-right.gif");}
+.photoslider-mini .sliderkit-btn-disable a{opacity:0
+/*can be set to any value until 1*/
+/*	;cursor:default;}
+.photoslider-mini .sliderkit-btn-disable a:hover{cursor:default;}
+.photoslider-mini .sliderkit-go-btn span{display:none;}
+*/
+
 
