--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ em {
 }
 
 .cork {
-  background: rgb(157,126,95);
+  background: rgba(157,126,95, 0.7);
 }
 
 .paper {
@@ -218,15 +218,20 @@ color: rgb(248, 70, 66);
 }
 .how-to figcaption {
   font-size: 12px;
+  font-weight: bold;
+  color: darkblue;
 }
 .how-to ul {
   list-style: none;
   margin: 0;
 }
 .how-to ul,
-.how-to p
-{
+.how-to p {
   margin-left: 20px;
+}
+.how-to em.transport {
+  font-size: 12px;
+  padding-right: 5px;
 }
 
 
