update images to 640x480

--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,6 @@ em {
   z-index: 90;
 }
 .index-logo img {
-  max-width: 85%;
 }
 
 .paper hr {
@@ -238,6 +237,23 @@ color: rgb(248, 70, 66);
 /* 
  * sliderkit 
  */
+.image-resolution-320,
+.image-resolution-640 {
+    display: none;
+}
+/*
+@media only screen and (max-device-width : 319px) {
+    .image-resolution-320 {
+        display: block;
+    }
+}
+@media only screen and (min-device-width : 320px) {
+    .image-resolution-640 {
+        display: block;
+    }
+}
+*/
+
 .sliderkit {
   max-width: 640px;
   width: 100%;
