--- a/css/style.css
+++ b/css/style.css
@@ -313,6 +313,7 @@ color: rgb(248, 70, 66);
 .sliderkit-panel-active img {
   display: block;
   margin: 0 auto;
+  height: 100%;
 
   /* vertical align */
   position: relative;
