--- a/css/style.css
+++ b/css/style.css
@@ -237,11 +237,11 @@ color: rgb(248, 70, 66);
 /* 
  * sliderkit 
  */
+/*
 .image-resolution-320,
 .image-resolution-640 {
     display: none;
 }
-/*
 @media only screen and (max-device-width : 319px) {
     .image-resolution-320 {
         display: block;
@@ -258,23 +258,29 @@ color: rgb(248, 70, 66);
   max-width: 640px;
   width: 100%;
   /*min-height: 200px;*/
-  height: 240px;
+  min-height: 240px;
+  height: 350px; /* + caption height */
 
   border-radius: 2px;
   border: 1px solid #aaa;
 }
+
+/* button */
 .photoslider-mini .sliderkit-go-btn {
   position:absolute;
   top:0;
   z-index:10;
   width:50px;
   /*height:335px;*/
+
+  margin-top: 55px;
 }
 .photoslider-mini .sliderkit-go-prev { left:0;  }
 .photoslider-mini .sliderkit-go-next { right:0; }
 .photoslider-mini .sliderkit-go-btn a{
   display:block;
   width:50px;
+
   height:240px;
   opacity:0.6;
   cursor:pointer;
@@ -285,7 +291,7 @@ color: rgb(248, 70, 66);
   text-align: center;
   font-size: 30px;
   padding-top: 100px;
-  height: 140px;
+  height: 140px; /* - padding */
 }
 .photoslider-mini .sliderkit-go-prev a { }
 .photoslider-mini .sliderkit-go-next a { }
@@ -295,7 +301,6 @@ color: rgb(248, 70, 66);
   /*display:none;*/
 }
 
-
 .photoslider-mini .sliderkit-btn-disable a {
   opacity:0; /*can be set to any value until 1*/
   cursor:default;
@@ -304,8 +309,7 @@ color: rgb(248, 70, 66);
   cursor:default;
 }
 
-/*
- */
+/* active */
 .sliderkit-panel-active {
   width : 100%;
   height: 100%;
@@ -313,7 +317,7 @@ color: rgb(248, 70, 66);
 .sliderkit-panel-active img {
   display: block;
   margin: 0 auto;
-  height: 100%;
+  max-height: 240px;
 
   /* vertical align */
   position: relative;
@@ -324,6 +328,36 @@ color: rgb(248, 70, 66);
 }
 .sliderkit-panel:not(.sliderkit-panel-active) {
   display: none;
+}
+
+/* caption */
+.sliderkit-panel-textbox {
+  bottom: 0;
+
+  width: 100%;
+
+  height: 44px;
+  line-height: 22px;
+}
+.sliderkit-panel-text {
+  width: 100%;
+}
+.sliderkit-panel-textbox p {
+  text-align: center;
+  font-size: 16px;
+  margin-bottom: 0;
+}
+.sliderkit-panel-textbox p.date {
+  position: absolute;
+  right: 0;
+
+  padding-right: 7px;
+  padding-bottom: 7px;
+  font-size: 12px;
+  color: #666;
+}
+.sliderkit-panel-textbox p.date:before {
+  content: "- ";
 }
 
 /*---------------------------------
