--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,37 @@ color: rgb(248, 70, 66);
 }
 
 
+/*
+ * Swiper
+ */
+.swiper-slide {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+/* description */
+.swiper-slide .description {
+  text-align: center;
+  font-size: 16px;
+  margin-bottom: 0;
+}
+.swiper-slide .date {
+  position: absolute;
+  right: 0;
+
+  padding-right: 7px;
+  padding-bottom: 7px;
+  font-size: 12px;
+  color: #666;
+}
+.swiper-slide p.date:before {
+  content: "- ";
+}
+/* pagiation */
+#gallery .swiper-container-horizontal > .swiper-pagination {
+    bottom: 90px;
+}
+
 /* 
  * sliderkit 
  */
