--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ em {
   padding-right: 8px;
   padding-bottom: 8px;
   border: 1px solid rgb(217,217,215);
+  border-radius: 5px;
 }
 
 .title {
@@ -262,7 +263,7 @@ color: rgb(248, 70, 66);
 }
 /* pagiation */
 #gallery .swiper-container-horizontal > .swiper-pagination {
-    bottom: 90px;
+  bottom: 0px;
 }
 
 /* 
