--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,14 @@ em {
   margin: 0;
   padding: 0;
   padding-top: 10px;
+  padding-bottom: 10px;
 
-  font-size: 14px;
-  line-height: 28px;
+  font-size: 24px;
+  line-height: 34px;
   font-weight: normal;
 
   text-align: center;
-  color: #666;
+  color: #333;
 }
 
 .inner-text {
@@ -71,6 +72,7 @@ em {
   z-index: 90;
 }
 .index-logo img {
+  width: 85%;
 }
 
 .paper hr {
@@ -102,6 +104,19 @@ em {
   background-color: rgb(246,246,244);
   background-image : none;
 }
+
+
+.content .navbar .nav > li:before {
+  content: " / ";
+  color: rgb(81,44,51);
+}
+.content .navbar .nav > li:nth-child(1):before {
+  content: "";
+}
+.content .navbar .nav > li > a {
+    display: inline-block;
+}
+
 
 .cork {
   background: rgba(157,126,95, 0.7);
@@ -185,6 +200,8 @@ color: rgb(248, 70, 66);
   font-size: 15px;
   margin-top: 0;
   margin-bottom: 20px;
+  color: #666;
+  font-weight: normal;
 }
 
 /* location */
@@ -206,6 +223,12 @@ color: rgb(248, 70, 66);
 /* message */
 .message {
   font-size: 12px;
+}
+
+/* info */
+.info .date {
+  font-size: 15px;
+  font-weight: bold;
 }
 
 /* how-to */
@@ -232,6 +255,19 @@ color: rgb(248, 70, 66);
 .how-to em.transport {
   font-size: 12px;
   padding-right: 5px;
+}
+
+/* parking-facilities */
+.parking-facilities figure {
+  margin: 40px 0;
+  text-align: center;
+}
+.parking-facilities figure img {
+  width: 90%;
+}
+.parking-facilities figcaption {
+  margin-top: 10px;
+  text-align: left;
 }
 
 
